@@ -5,10 +5,8 @@ import com.ems.dtos.CandidateDTO;
 import com.ems.dtos.CandidatePageResponse;
 import com.ems.entities.Candidate;
 import com.ems.entities.CandidateName;
-import com.ems.exceptions.CandidateAlreadyExistsException;
-
 import com.ems.entities.Election;
-
+import com.ems.exceptions.CandidateAlreadyExistsException;
 import com.ems.exceptions.CandidateNotFoundException;
 import com.ems.exceptions.ElectionNotFoundException;
 import com.ems.exceptions.PartyNotFoundException;
@@ -20,17 +18,19 @@ import com.ems.services.CandidateService;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.springframework.data.domain.Sort;
+
+@Slf4j
 @Service
 @AllArgsConstructor
 public class CandidateServiceImpl implements CandidateService {
@@ -43,12 +43,11 @@ public class CandidateServiceImpl implements CandidateService {
     public CandidateDTO findByCandidateSSN(String candidateSSN) {
         return candidateRepository.findByCandidateSSN(candidateSSN)
                 .map(candidateMapper::toCandidateDTO)
-                .orElseThrow(() -> new CandidateNotFoundException("No Candidate is found with the SSN: " + candidateSSN));
+                .orElseThrow(() -> new CandidateNotFoundException("No Candidate found with SSN: " + candidateSSN));
     }
 
     @Override
     public Candidate saveCandidate(@Valid CandidateDTO candidateDTO) {
-
         if (candidateRepository.findByCandidateSSN(candidateDTO.getCandidateSSN()).isPresent()) {
             throw new CandidateAlreadyExistsException("Candidate with SSN " + candidateDTO.getCandidateSSN() + " already exists.");
         }
@@ -73,12 +72,11 @@ public class CandidateServiceImpl implements CandidateService {
         return candidateRepository.save(candidate);
     }
 
-
     @Override
     public CandidateDTO findById(Long candidateId) {
-       return candidateRepository.findById(candidateId)
-               .map(candidateMapper::toCandidateDTO)
-               .orElseThrow(()->new CandidateNotFoundException("No Such candidate with id"+candidateId));
+        return candidateRepository.findById(candidateId)
+                .map(candidateMapper::toCandidateDTO)
+                .orElseThrow(() -> new CandidateNotFoundException("No Such candidate with id: " + candidateId));
     }
 
     @Override
@@ -105,23 +103,23 @@ public class CandidateServiceImpl implements CandidateService {
 
     @Override
     public List<CandidateByPartyDTO> findByPartyName(String candidatePartyName) {
-        List<Candidate> candidates=candidateRepository.findByParty_PartyName(candidatePartyName);
+        List<Candidate> candidates = candidateRepository.findByParty_PartyName(candidatePartyName);
 
-        if(candidates.isEmpty()){
-            throw new PartyNotFoundException("Party with given name not found");
+        if (candidates.isEmpty()) {
+            throw new PartyNotFoundException("Party with the given name not found.");
         }
+
         return candidates.stream()
                 .map(candidateMapper::toCandidateByPartyDTO)
-                .toList();
-
+                .collect(Collectors.toList());
     }
 
     @Override
-
     public List<CandidateDTO> findAll() {
         return candidateRepository.findAll()
-                .stream().map(candidateMapper::toCandidateDTO)
-                .toList();
+                .stream()
+                .map(candidateMapper::toCandidateDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -129,6 +127,7 @@ public class CandidateServiceImpl implements CandidateService {
         candidateRepository.deleteById(candidateId);
     }
 
+    @Override
     public Page<CandidateDTO> getPagedCandidate(int page, int perPage, Sort sort) {
         Pageable pageable = PageRequest.of(page, perPage, sort);
         Page<Candidate> candidatePage = candidateRepository.findAll(pageable);
@@ -137,22 +136,16 @@ public class CandidateServiceImpl implements CandidateService {
 
     @Override
     public CandidatePageResponse getCandidateByElectionId(Long electionId, int page, int perPage) {
-        // Check if election exists
         Election election = electionRepository.findById(electionId)
                 .orElseThrow(() -> new ElectionNotFoundException("Election not found with ID: " + electionId));
-
         Pageable pageable = PageRequest.of(page, perPage);
-
-        // Fetch paged candidates
         Page<Candidate> candidatePage = candidateRepository.findByElection_electionId(electionId, pageable);
 
         if (candidatePage.isEmpty()) {
             throw new CandidateNotFoundException("No candidates found for Election ID: " + electionId);
         }
 
-        // Convert entities to DTOs
         Page<CandidateDTO> candidateDTOPage = candidatePage.map(candidateMapper::toCandidateDTO);
-
         return new CandidatePageResponse(
                 candidateDTOPage.getContent(),
                 candidateDTOPage.getNumber(),
@@ -166,9 +159,3 @@ public class CandidateServiceImpl implements CandidateService {
 
 
 }
-
-
-
-
-
-
